Sun Mar 27 11:18:35 2011  Tadayoshi Funaba  <tadf@dotrb.org>

	* ext/date/date_core.c: removed unused variables.

Sat Mar 26 15:16:09 2011  Tanaka Akira  <akr@fsij.org>

	* ext/socket/getaddrinfo.c: parenthesize macro arguments.

Sat Mar 26 05:27:34 2011  NARUSE, Yui  <naruse@ruby-lang.org>

	* ext/date/lib/date/format.rb (DateTime#strftime): removed because
	  date_core defines it.

Fri Mar 25 21:59:45 2011  Tadayoshi Funaba  <tadf@dotrb.org>

	* ext/date/date_core.c: should not force cast with macros.

Fri Mar 25 21:56:10 2011  Tanaka Akira  <akr@fsij.org>

	* ext/sdbm/init.c: parenthesize macro arguments.

Fri Mar 25 19:39:40 2011  Ben Walton <bwalton@artsci.utoronto.ca>

	* test/test_syslog.rb:
	  Skip syslog tests that rely on LOG_PERROR unless it's defined

	  Instead of checking looking at the platform to determine if the tests
	  relying on LOG_PERROR should be run, look for the definition of the
	  constant as this will be robust against all platforms as long as the
	  underlying syslog.c code sets it up correctly.

	  This specifically addresses failures on Solaris 9.

	  Use LOG_PID instead of LOG_PERROR in Syslog.open test

	  LOG_PERROR isn't a POSIX option for syslog, so it fails on platforms
	  that don't define it.  Solaris 9 and 10 are examples of this.

	  Use LOG_PID instead.

Fri Mar 25 15:42:17 2011  NARUSE, Yui  <naruse@ruby-lang.org>

	* ext/sdbm/_sdbm.c (sdbm_open): use size_t.

	* ext/syck/bytecode.c: ditto.

	* ext/sdbm/_sdbm.c (delpair): use ptrdiff_t.

	* ext/sdbm/init.c: use RSTRING_LENINT.

	* ext/dl/handle.c: suppress warning: shorten-64-to-32.

	* ext/strscan/strscan.c: ditto.

	* ext/syck/emitter.c: ditto.

	* ext/syck/implicit.c: ditto.

	* ext/syck/syck.c: ditto.

	* ext/syck/token.c: ditto.

Fri Mar 25 12:14:58 2011  NARUSE, Yui  <naruse@ruby-lang.org>

	* ext/nkf/nkf-utf8/nkf.c: import nkf 7f18e30.

Fri Mar 25 11:49:29 2011  NAKAMURA Usaku  <usa@ruby-lang.org>
