@@ -1,3 +1,8 @@
+Sun Mar 27 15:45:47 2011  Nobuyoshi Nakada  <nobu@ruby-lang.org>
+
+	* misc/ruby-mode.el: suppress warnings at byte compile.  fixes
+	  http://bugs.debian.org/cgi-bin/bugreport.cgi?bug=502926
+
 Sun Mar 27 11:18:35 2011  Tadayoshi Funaba  <tadf@dotrb.org>
 
 	* ext/date/date_core.c: removed unused variables.
